<resources>
    <string name="app_name">Cards</string>

    <string name="supporting">Greyhound divisively hello coldly wonderfully marginally far upon excluding.</string>
    <string name="title">Title</string>
    <string name="subhead">Subhead</string>
    <string name="primary">Title goes here</string>
    <string name="primary_short">Title here</string>
    <string name="subtext">Subtitle here</string>
    <string name="action_1">Action 1</string>
    <string name="action_2">Action 2</string>
    <string name="expanded_supporting">I\'m a thing. But, like most politicians, he promised more than he could deliver. You won\'t have time for sleeping, soldier, not with all the bed making you\'ll be doing. Then we\'ll go with that data file! Hey, you add a one and two zeros to that or we walk! You\'re going to do his laundry? I\'ve got to find a way to escape.</string>
</resources>
